[package]
name = "ranlux_rs"
version = "0.1.0"
authors = ["Aliénore Bouttefeux"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/ABouttefeux/ranlux_rs"
categories = ["Algorithms", "Science", "No standard library"]
description = "Luxury random numbers"
keywords = ["RNG", "PRGN", "ranlux", "ranlxd", "ranlxs"]
publish = false
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde-serialize = ["serde"]

[dependencies]
rand_core = "0.6.2"
serde = { version = "1.0", features = ["derive"], optional = true }
rand_xoshiro = "0.6.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
lto = true
